--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "amfmf2014",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -15,6 +15,10 @@
     "stylus": "~0.42.2",
     "uglify-js": "~2.4.12",
     "csso": "~1.3.11",
-    "marked": "~0.3.1"
+    "marked": "~0.3.1",
+    "flightplan": "~0.3.0"
+  },
+  "devDependencies": {
+    "flightplan": "~0.3.0"
   }
 }
